# shut-the-box

./: .gitignore  Cargo.toml  best_moves.yml  flake.nix
compute/: Cargo.toml
compute/src/: board_roll.rs  lib.rs
compute/src/simulation/: board.rs  mod.rs  playing.rs  roll.rs
gui/: Cargo.toml
gui/src/: main.rs
networked/: Cargo.toml
networked/src/: client.rs  client_states.rs  lib.rs  main.rs  server.rs  server_state.rs  states.rs
src/: board.rs  board_roll.rs  game_node.rs  game_state.rs  main.rs  playing.rs  roll.rs  simulation.rs
src/simulation/: playing.rs
