[package]
name = "networked"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.202", features = ["derive"] }
serde_yml = "0.0.10"
fastrand = "2.1.0"
mac_address2 = { version = "2.0.2", features = ["serde"] }

clap = { version = "4.5.5", features = ["derive"] }
clap_derive = "4.5.5"